# casectl

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW-DETAILED.md  REVIEW-REPORT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
examples/plugins/casectl-example-plugin/: README.md  pyproject.toml
examples/plugins/casectl-example-plugin/casectl_example/: plugin.py
src/casectl/: __init__.py  __main__.py
src/casectl/cli/: main.py
src/casectl/config/: __init__.py  manager.py  models.py
src/casectl/daemon/: __init__.py  event_bus.py  plugin_host.py  runner.py  server.py
src/casectl/hardware/: __init__.py  detect.py  expansion.py  oled.py  system.py
src/casectl/plugins/: __init__.py  base.py
src/casectl/plugins/alerting/: __init__.py  channels.py  plugin.py
src/casectl/plugins/automation/: __init__.py  engine.py  models.py  plugin.py
src/casectl/plugins/fan/: __init__.py  controller.py  curve.py  plugin.py  routes.py
src/casectl/plugins/led/: __init__.py  plugin.py  routes.py
src/casectl/plugins/monitor/: __init__.py  plugin.py  routes.py
src/casectl/plugins/mqtt/: __init__.py  client.py  ha_discovery.py  metrics.py  plugin.py  routes.py  state.py
src/casectl/plugins/oled/: __init__.py  plugin.py  routes.py
src/casectl/plugins/prometheus/: __init__.py  plugin.py  routes.py
src/casectl/tui/: input_handler.py  top.py
src/casectl/web/: app.py  sse.py
src/casectl/web/static/: realtime.js  style.css  ws-controls.js
src/casectl/web/templates/: base.html  dashboard.html
src/casectl/web/templates/partials/: fan.html  led.html  monitor.html  oled.html
tests/: conftest.py
tests/test_cli/: test_cli.py
tests/test_config/: test_manager.py  test_models.py
tests/test_daemon/: test_runner.py  test_server.py
tests/test_hardware/: test_detect.py  test_expansion.py  test_oled.py  test_system.py
tests/test_plugins/: test_alerting_channels.py  test_automation_engine.py  test_automation_models.py  test_automation_plugin.py  test_event_bus.py  test_fan_controller.py  test_fan_curve.py  test_fan_routes.py  test_led_plugin.py  test_monitor_plugin.py  test_mqtt_client.py  test_mqtt_ha_discovery.py  test_mqtt_metrics.py  test_mqtt_plugin.py  test_mqtt_routes.py  test_mqtt_state.py  test_oled_routes.py  test_plugin_host.py  test_prometheus_plugin.py
tests/test_tui/: test_input_handler.py  test_top.py
tests/test_web/: test_colour_picker.py  test_sse.py  test_web_app.py  test_ws_controls.py
