[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "casectl"
version = "0.1.0"
description = "Headless-first multi-interface controller for Freenove FNK0107B Raspberry Pi case"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Christopher Griffiths" },
]
keywords = ["raspberry-pi", "fan-control", "oled", "led", "cli", "hardware", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
]

[project.optional-dependencies]
hardware = [
    "smbus2>=0.4",
    "luma.core>=2.4",
    "luma.oled>=3.10",
    "Pillow>=10.0",
]
gui = [
    "PyQt5>=5.15",
]
tui = [
    "textual>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]
all = [
    "casectl[hardware,tui,dev]",
]

[project.scripts]
casectl = "casectl.cli.main:cli"

[project.entry-points."casectl.plugins"]
fan-control = "casectl.plugins.fan:FanControlPlugin"
led-control = "casectl.plugins.led:LedControlPlugin"
oled-display = "casectl.plugins.oled:OledDisplayPlugin"
system-monitor = "casectl.plugins.monitor:SystemMonitorPlugin"
prometheus = "casectl.plugins.prometheus:PrometheusPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/casectl"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
